--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ padding: 0;}
   text-align: center;
   text-shadow: 3px 2px 4px rgba(0, 0, 7, 1);}
 
-.hero-text a{
+.hero-text a, .card a{
   color: #fff;
   text-decoration: none;
   background-color: rgb(102,205,170);
@@ -88,22 +88,84 @@ padding: 0;}
   box-shadow:         5px 1px 12px 0px rgba(0, 5, 9, 0.5);
 }
 
-.hero-text a:hover{
+.hero-text a:hover, .card a:hover {
   background: rgb(69,139,116);
+}
+
+.border{
+  border: 1px solid #000;
+  border-top: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  padding: 1rem;
+}
+
+main img{
+  width: 100%;
+  display: block;
+}
+
+h3{
+  margin: 0;
+}
+
+.row{
+  text-align: center;
+}
+
+.border a{
+  display: block;
+}
+
+.card img{
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
 
 }
+
+.card{
+  margin-bottom: 1rem;
+}
+
+
 
 @media (min-width:1024px) {
   #navi-header li
     {display: inline-block;
     margin-left: 2rem;
-
   }
+
   #menu{
     float: right;
     display: block;
     margin-top: 19px;
 
   }
-  #burger{display: none;}
-}
+
+  #burger{
+    display: none;
+  }
+
+  .flexbox{
+    display: flex;
+  }
+
+
+  .card:first-child{
+    margin-right: : 1rem;
+  }
+
+  .card:last-child{
+    margin-left: 1rem;
+  }
+
+  #rezepte{
+    width: 66.66%;
+
+  }
+
+  #sidebar{
+    width: 33.33%;
+  }
+
+  }
